<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact_view">ContactViewActivity</string>
    <string name="first_name_prompt">First Name</string>
    <string name="surname_prompt">Surname</string>
    <string name="date_of_birth_prompt">D.O.B.</string>
    <string name="mobile_number_prompt">Mobile</string>
    <string name="home_number_prompt">Home</string>
    <string name="work_number_prompt">Work</string>
    <string name="email_address_prompt">Email</string>
    <string name="address_prompt">Address</string>
    <string name="notes_prompt">Notes</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="add_contact">Add New Contact</string>
    <string name="sort_contacts">Sort</string>
    <string name="save_contact">Save</string>
    <string name="cancel_add">Cancel</string>
    <string name="undo">Undo</string>
    <string name="undoall">Undo All</string>
    <string name="sort_dialog_title">Sort Contacts</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_contact_image_dialog_title">Add Photo</string>
    <string name="reverse_option">Reverse?</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="image_prompt">image</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="contact_list_title">Contacts</string>

</resources>
