<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ScrollView
	    android:layout_width="wrap_content"
	    android:layout_height="0dip"
	    android:layout_weight="1">
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingLeft="24dp"
		    android:paddingTop="8dp"
		    android:paddingBottom="8dp"
		    android:divider="@drawable/divider"
		    android:showDividers="middle">
		    
		    <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="115dp" 
		        android:paddingRight="8dp">
		        
		        <EditText
			    	android:id="@+id/contact_first_name"
			    	android:layout_width="match_parent"
			       	android:layout_height="wrap_content"
			       	android:background="@null"
			       	android:paddingTop="16dp"
			       	android:layout_alignParentTop="true"
			       	android:textSize="23sp"
			       	android:textStyle="bold"
			       	android:hint="@string/first_name_prompt"
			       	android:inputType="textCapWords" />
		        
		       	<EditText
		       		android:id="@+id/contact_surname"
		       		android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_below="@id/contact_first_name"
		        	android:textSize="23sp"
		        	android:textStyle="bold"
		        	android:background="@null"
		        	android:hint="@string/surname_prompt"
		        	android:inputType="textCapWords" />
		
		        <ImageButton
		            android:id="@+id/contact_image_button"
		            android:layout_width="96dp"
		            android:layout_height="96dp"
		            android:layout_alignParentRight="true"
		            android:layout_alignParentTop="true"
		            android:paddingLeft="8dp"
		            android:scaleType="fitCenter"
		            android:src="@drawable/default_contact_photo" />
		        

		        <TextView
		            android:id="@+id/tap_to_change"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/contact_image_button"
		            android:layout_alignLeft="@id/contact_image_button"
		            android:layout_alignRight="@id/contact_image_button"
		            android:textSize="12sp"
		            android:gravity="center"
		            android:text="@string/tap_to_change" />
		        
		    </RelativeLayout>
		
		    <EditText
		        android:id="@+id/contact_mobile_number"
		        android:hint="@string/mobile_number_prompt"
		        android:inputType="phone"
		        android:background="@null"
		        style="@style/contact_info" />
		    
		    <EditText
		        android:id="@+id/contact_home_number"
		        android:hint="@string/home_number_prompt"
		        android:inputType="phone"
		        android:background="@null"
		        style="@style/contact_info"  />
		    
		    <EditText
		        android:id="@+id/contact_work_number"
		        android:hint="@string/work_number_prompt"
		        android:inputType="phone"
		        android:background="@null"
		        style="@style/contact_info"  />
		    
		    <EditText
		        android:id="@+id/contact_date_of_birth"
		        android:hint="@string/date_of_birth_prompt"
		        android:inputType="date"
		        android:background="@null"
		        style="@style/contact_info"  />
		    
		    <EditText
		        android:id="@+id/contact_email"
		        android:hint="@string/email_address_prompt"
		        android:inputType="textEmailAddress"
		        android:background="@null"
		        style="@style/contact_info"  />
		    
		    <EditText
		        android:id="@+id/contact_address"
		        android:hint="@string/address_prompt"
		        android:inputType="textCapSentences"
		        android:background="@null"
		        style="@style/contact_info"  />
		    
		    <EditText
		        android:id="@+id/contact_notes"
		        android:hint="@string/notes_prompt"
		        android:inputType="textCapSentences"
		        android:background="@null"
		        style="@style/contact_info"  />
		
		</LinearLayout>
	</ScrollView>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="48dp" >

	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="4dip"
	        android:layout_marginRight="4dip"
	        android:background="?android:attr/dividerVertical" />

	    <View
	        android:id="@+id/middle_divider"
	        android:layout_width="1dip"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="4dip"
	        android:layout_marginTop="4dip"
	        android:background="?android:attr/dividerVertical" />

	    <Button
	        android:id="@+id/cancel_contact_add"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_toLeftOf="@id/middle_divider"
	        android:background="?android:attr/selectableItemBackground"
	        android:text="@string/cancel_add" />

	    <Button
	        android:id="@+id/save_contact"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@id/middle_divider"
	        android:background="?android:attr/selectableItemBackground"
	        android:text="@string/save_contact" />
	    
	</RelativeLayout>
    
</LinearLayout>