<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp" >

    <ImageView
        android:id="@+id/contact_image"
        android:paddingLeft="8dp"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/default_contact_photo" />

    <TextView
        android:id="@+id/contact_first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/contact_image"
        android:gravity="center_vertical"
        android:hint="@string/first_name_prompt"
        android:textSize="20sp" />

    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_first_name"
        android:layout_alignLeft="@id/contact_first_name"
    	android:layout_alignRight="@id/contact_first_name" />
    
    <TextView
        android:id="@+id/contact_surname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/contact_first_name"
        android:layout_toLeftOf="@id/contact_image"
        android:gravity="center_vertical"
        android:text="@string/surname_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_surname"
        android:layout_alignLeft="@id/contact_surname"
    	android:layout_alignRight="@id/contact_surname" />

    <TextView
        android:id="@+id/contact_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/contact_surname"
        android:layout_toLeftOf="@id/contact_image"
        android:gravity="center_vertical"
        android:text="@string/date_of_birth_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_date_of_birth"
        android:layout_alignLeft="@id/contact_date_of_birth"
    	android:layout_alignRight="@id/contact_date_of_birth" />

    <TextView
        android:id="@+id/contact_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_date_of_birth"
        android:gravity="center_vertical"
        android:text="@string/mobile_number_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_mobile_number"
        android:layout_alignLeft="@id/contact_mobile_number"
    	android:layout_alignRight="@id/contact_mobile_number" />

    <TextView
        android:id="@+id/contact_home_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_mobile_number"
        android:gravity="center_vertical"
        android:text="@string/home_number_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_home_number"
        android:layout_alignLeft="@id/contact_home_number"
    	android:layout_alignRight="@id/contact_home_number" />

    <TextView
        android:id="@+id/contact_work_number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_home_number"
        android:gravity="center_vertical"
        android:text="@string/work_number_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_work_number"
        android:layout_alignLeft="@id/contact_work_number"
    	android:layout_alignRight="@id/contact_work_number" />

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_work_number"
        android:gravity="center_vertical"
        android:text="@string/email_address_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_email"
        android:layout_alignLeft="@id/contact_email"
    	android:layout_alignRight="@id/contact_email" />

    <TextView
        android:id="@+id/contact_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_email"
        android:gravity="center_vertical"
        android:text="@string/address_prompt"
        android:textSize="20sp" />
    
    <View
        style="@style/HorizontalRule"
        android:layout_below="@id/contact_address"
        android:layout_alignLeft="@id/contact_address"
    	android:layout_alignRight="@id/contact_address" />

    <TextView
        android:id="@+id/contact_notes"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/contact_image"
        android:layout_below="@id/contact_address"
        android:gravity="center_vertical"
        android:text="@string/notes_prompt"
        android:textSize="20sp" />

</RelativeLayout>